--- a/assets/styling/main.css
+++ b/assets/styling/main.css
@@ -1217,6 +1217,14 @@ body main.main-content section.contact-section-wrap .contact-section .contact-ct
   text-transform: uppercase;
   transition: 550ms all ease;
 }
+@media screen and (max-width: 479px) {
+  body main.main-content section.contact-section-wrap .contact-section .contact-cta-inner-wrap a.contact-cta-btn {
+    font-size: 35px;
+    line-height: 40px;
+    letter-spacing: 0.35px;
+    gap: 20px;
+  }
+}
 body main.main-content section.contact-section-wrap .contact-section .contact-cta-inner-wrap a.contact-cta-btn span.cta-text {
   position: relative;
 }
@@ -1261,6 +1269,72 @@ body main.main-content section.contact-section-wrap .contact-section .contact-ct
   transition: 550ms all ease;
   filter: brightness(1);
   transform: rotate(45deg);
+}
+body main.main-content section.image-slider-section-wrap {
+  padding: 40px 0;
+}
+@media screen and (max-width: 991px) {
+  body main.main-content section.image-slider-section-wrap {
+    padding: 30px 0;
+  }
+}
+@media screen and (max-width: 479px) {
+  body main.main-content section.image-slider-section-wrap {
+    padding: 15px 0;
+  }
+}
+body main.main-content section.image-slider-section-wrap div.image-slider-section .image-slider-inner-wrap:not(.slick-initialized) {
+  display: flex;
+  align-items: center;
+  overflow-x: auto;
+  gap: 15px;
+}
+body main.main-content section.image-slider-section-wrap div.image-slider-section .image-slider-inner-wrap:not(.slick-initialized) .img-slider-itm {
+  min-width: calc(33.3333333333% - 10px);
+  aspect-ratio: 3/4;
+}
+body main.main-content section.image-slider-section-wrap div.image-slider-section .image-slider-inner-wrap.slick-initialized .slick-track {
+  display: flex;
+}
+body main.main-content section.image-slider-section-wrap div.image-slider-section .image-slider-inner-wrap.slick-initialized .slick-track .img-slider-itm {
+  padding: 0 10px;
+  height: inherit;
+}
+@media screen and (max-width: 479px) {
+  body main.main-content section.image-slider-section-wrap div.image-slider-section .image-slider-inner-wrap.slick-initialized .slick-track .img-slider-itm {
+    padding: 0 5px;
+  }
+}
+@media screen and (min-width: 992px) {
+  body main.main-content section.image-slider-section-wrap div.image-slider-section .image-slider-inner-wrap.slick-initialized .slick-track .img-slider-itm:nth-child(odd) {
+    width: 30vw;
+  }
+}
+@media screen and (min-width: 992px) {
+  body main.main-content section.image-slider-section-wrap div.image-slider-section .image-slider-inner-wrap.slick-initialized .slick-track .img-slider-itm:nth-child(even) {
+    width: 40vw;
+  }
+}
+@media screen and (min-width: 992px) {
+  body main.main-content section.image-slider-section-wrap div.image-slider-section .image-slider-inner-wrap .img-slider-itm {
+    max-height: 400px;
+  }
+}
+@media screen and (max-width: 991px) {
+  body main.main-content section.image-slider-section-wrap div.image-slider-section .image-slider-inner-wrap .img-slider-itm {
+    aspect-ratio: 2/3;
+  }
+}
+@media screen and (max-width: 479px) {
+  body main.main-content section.image-slider-section-wrap div.image-slider-section .image-slider-inner-wrap .img-slider-itm {
+    aspect-ratio: 1;
+  }
+}
+body main.main-content section.image-slider-section-wrap div.image-slider-section .image-slider-inner-wrap .img-slider-itm img.slider-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 /*# sourceMappingURL=main.css.map */
