--- a/assets/styling/scss/pages/_home.scss
+++ b/assets/styling/scss/pages/_home.scss
@@ -397,6 +397,7 @@ body {
       // Rounded Banner Section ends here
 
       // Testimonial Section
+      // Note for Nitish: I've tried the Testimonial section as per the instruction from the Loom video however it was not good fit for this overall UI
       &.testimonial-section-wrap {
         .testimonial-section {
           background-position: center;
@@ -627,6 +628,13 @@ body {
               text-transform: uppercase;
               transition: $transition;
 
+              @media screen and (max-width: $breakpoint-xsm) {
+                font-size: 35px;
+                line-height: 40px;
+                letter-spacing: 0.35px;
+                gap: 20px;
+              }
+
               span.cta-text {
                 position: relative;
 
@@ -684,6 +692,79 @@ body {
         }
       }
       // Contact CTA Section ends here
+
+      // Image Slider Section
+      &.image-slider-section-wrap {
+        padding: 40px 0;
+
+        @media screen and (max-width: $breakpoint-md) {
+          padding: 30px 0;
+        }
+        @media screen and (max-width: $breakpoint-xsm) {
+          padding: 15px 0;
+        }
+
+        div.image-slider-section {
+          .image-slider-inner-wrap {
+            &:not(.slick-initialized) {
+              @include flex-center;
+              overflow-x: auto;
+              gap: 15px;
+
+              .img-slider-itm {
+                min-width: calc(calc(100% / 3) - 10px);
+                aspect-ratio: 3/4;
+              }
+            }
+
+            &.slick-initialized {
+              .slick-track {
+                display: flex;
+
+                .img-slider-itm {
+                  padding: 0 10px;
+                  height: inherit;
+
+                  @media screen and (max-width: $breakpoint-xsm) {
+                    padding: 0 5px;
+                  }
+
+                  &:nth-child(odd) {
+                    @media screen and (min-width: 992px) {
+                      width: 30vw;
+                    }
+                  }
+                  &:nth-child(even) {
+                    @media screen and (min-width: 992px) {
+                      width: 40vw;
+                    }
+                  }
+                }
+              }
+            }
+
+            .img-slider-itm {
+              @media screen and (min-width: 992px) {
+                max-height: 400px;
+              }
+              @media screen and (max-width: $breakpoint-md) {
+                aspect-ratio: 2/3;
+              }
+              @media screen and (max-width: $breakpoint-xsm) {
+                aspect-ratio: 1;
+              }
+
+              img.slider-img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
+              }
+            }
+          }
+        }
+      }
+      // Image Slider Section ends here
     }
   }
 }
